--- a/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
+++ b/RoomBookingSysytem1/Views/Shared/_AccountsLayout.cshtml
@@ -11,6 +11,7 @@
     
 </head>
 <body style="background-image: url('../../content/images/C101.jpg'); background-size: cover; color:white;">
+    <link href="~/Content/SignUp.css" rel="stylesheet" />
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" style="background-color:cadetblue">
         <div class="container">
             @Html.ActionLink("botSense | CRBS", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
